fix JdbcExecutor